# libopensmskummeeplugin

./: ChangeLog  DISCLAIMER  INSTALL  META  Makefile.am  README  TODO  autogen.sh  configure.in  libopensmskummeeplugin.spec.in  master-conf-build.sh
doc/: database_tabes
etc/: libopensmskummee.conf
man/: opensmskummeequery.8
scripts/: opensmskummee_create_db.pl.in  opensmskummee_update_thresh.pl.in
src/: opensmskummeeconf.h  opensmskummeeplugin.c  opensmskummeeplugin.h  opensmskummeequery.c  sql_queries.c  sql_queries.h
